# Borrador-proyecto

./: CMakeLists.txt  README.md  planets.csv
include/: defines.h  menu.h  planets.h
src/: display_data.c  dynamic_memory.c  file_management.c  main.c  menu.c  sort.c
